# askm

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  justfile  mkdocs.yml  objects.inv  packaging-guide.sh  pyproject.toml  sitemap.xml  user_profile_check.yml  zensical.toml
.gemini/agents/: advocate-con.md  advocate-pro.md  debate-judge.md
.github/workflows/: cd.yml  docs.yml  promote-to-release.yml  publish.yml  release.yml  weekly-release-pr.yml
backlog/: roadmap.md
docs/: index.md  jup-vs-npx-skills.md  lockfile-spec.md  reference.md
jup-vs-npx-skills/: index.html
reference/: index.html
repro/: repro_normalization.py  reproduce_sync_traversal.py  verify_scenario1.py  verify_scenario2.py  verify_scenario3.py
repro/race_skills/skill1/: SKILL.md
repro/race_skills/skill10/: SKILL.md
repro/race_skills/skill4/: SKILL.md
repro/race_skills/skill5/: SKILL.md
repro/race_skills/skill6/: SKILL.md
repro/race_skills/skill7/: SKILL.md
repro/race_skills/skill8/: SKILL.md
repro/race_skills/skill9/: SKILL.md
repro/scripts/: chaos_config_race.py  chaos_dependency_test.py  chaos_interrupt_monkey.py  chaos_interrupt_target.py  chaos_network_test.py  chaos_race.py  chaos_stale_lock.py  chaos_sync_test.py  chaos_test.py  repro_normalization.py  repro_race.py  reproduce_path_traversal.py  reproduce_sync_traversal.py  test_deadlock.py  verify_git_injection.py  verify_phase2_security.py
repro/skill3/: SKILL.md
scripts/: update_screenshots.py
search/: search_index.json
skills/create-gemini-agent/: SKILL.md
skills/create-skill/: SKILL.md
skills/create-skill/references/: skills-spec.txt
skills/eval-skill/: SKILL.md
skills/jup/: SKILL.md
skills/jup-architect/: SKILL.md
skills/jup-roadmap/: SKILL.md
skills/productivity/gmail/: SKILL.md
skills/productivity/gmail/assets/: report_template.html
skills/productivity/gmail/scripts/: gmail_cleanup.sh
src/askm/: __init__.py
src/jup/: commands.py  config.py  context.py  main.py  models.py
src/jup/commands/: __init__.py  add.py  config_cli.py  find.py  harness_cli.py  list.py  mv.py  remove.py  show.py  sync.py  tui.py  utils.py  utils_tui.py
src/jup/core/: constants.py  filesystem.py  git.py  lock.py  sync.py
superpowers/plans/2026-04-16-jup-enhancements/: index.html
superpowers/plans/2026-04-16-jup-mv-path/: index.html
superpowers/plans/2026-04-17-manage-unmanaged-skills/: index.html
tests/: conftest.py
tests/concurrency/: test_locking.py
tests/e2e/: test_workflow.py
tests/integration/: test_add_unmanaged.py  test_agent_commands.py  test_aliases.py  test_cli_commands.py  test_cli_config.py  test_deduplication.py  test_harness_commands.py  test_list_metadata.py  test_sync_safety.py
tests/security/: test_git_hardening.py  test_normalization.py  test_path_validation.py
tests/unit/: test_config.py  test_metadata_injection.py  test_models.py  test_scope_compat.py  test_skill_fetch.py  test_tui_logic.py  test_tui_smoke.py  test_url_parser.py
