[project]
name = "jup"
version = "0.14.0-beta.1"
description = "jup - Agent Skills Manager"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prompt-toolkit>=3.0.51",
    "pydantic>=2.10.6",
    "pygments>=2.19.2",
    "rich>=13.9.4",
    "typer>=0.15.1",
]

[project.urls]
Homepage = "https://github.com/andrader/jup"
Issues = "https://github.com/andrader/jup/issues"
Repository = "https://github.com/andrader/jup"

[project.scripts]
jup = "jup.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jup"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
    "ty>=0.0.29",
    "commitizen>=4.1.0",
    "python-semantic-release>=9.0.0",
    "pre-commit>=4.0.0",
    "zensical>=0.0.30",
    "mkdocstrings>=1.0.4",
    "mkdocstrings-python>=2.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
version = "0.3.2"
update_changelog_on_bump = true

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = "uv build"
upload_to_pypi = false
upload_to_release = true

[tool.semantic_release.branches.main]
match = "main"
prerelease = true
prerelease_token = "beta"
tag = false

[tool.semantic_release.branches.release]
match = "release"
prerelease = false
tag = true

[tool.semantic_release.changelog]
default_templates.changelog_file = "CHANGELOG.md"

[tool.ruff]
exclude = ["templates"]

[tool.ty.src]
include = ["src", "tests"]
exclude = ["templates/"]
