[project]
name = "jup"
version = "0.19.0"
description = "jup - Agent Skills Manager"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "portalocker>=2.10.0",
    "prompt-toolkit>=3.0.51",
    "pydantic>=2.10.6",
    "pygments>=2.19.2",
    "rich>=13.9.4",
    "typer>=0.15.1",
]

[project.urls]
Homepage = "https://github.com/andrader/jup"
Issues = "https://github.com/andrader/jup/issues"
Repository = "https://github.com/andrader/jup"

[project.scripts]
jup = "jup.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jup"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
    "ty>=0.0.29",
    "commitizen>=4.1.0",
    "python-semantic-release>=9.0.0",
    "pre-commit>=4.0.0",
    "zensical>=0.0.30",
    "mkdocstrings>=1.0.4",
    "mkdocstrings-python>=2.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
update_changelog_on_bump = true

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = "uv build"
upload_to_pypi = false
upload_to_release = true

[tool.semantic_release.branches.main]
match = "main"
prerelease = false
tag = true

[tool.semantic_release.branches.dev]
match = "dev"
prerelease = true
prerelease_token = "beta"
tag = true
# Ensure we don't commit back to dev, only main
commit = false

[tool.semantic_release.changelog]
default_templates.changelog_file = "CHANGELOG.md"
# Skip beta tags in the stable changelog
ignore_token = "beta"
# Recommended patterns for conventional commits parser that is scope aware
exclude_commit_patterns = [
    '''chore(?:\([^)]*?\))?: .+''',
    '''ci(?:\([^)]*?\))?: .+''',
    '''refactor(?:\([^)]*?\))?: .+''',
    '''style(?:\([^)]*?\))?: .+''',
    '''test(?:\([^)]*?\))?: .+''',
    '''build\((?!deps\): .+)''',
    '''Initial [Cc]ommit.*''',
]

[tool.ruff]
exclude = ["templates", "repro"]

[tool.ty.src]
include = ["src", "tests"]
exclude = ["templates/"]
